[package]
name = "fast-smr"
version = "0.2.2"
edition = "2021"
description = "Toward fast, wait-free, portable, and robust memory reclamation."
homepage = "https://github.com/aarc-rs/"
repository = "https://github.com/aarc-rs/fast-smr"
license = "MIT"
keywords = ["smr", "thread-safe", "sync", "lock-free"]
categories = ["concurrency", "memory-management", "data-structures", "algorithms"]
exclude = [".github/", ".gitignore", "target/"]

[dependencies]
dyntls = { path = "../../../app/dyntls" }

[dev-dependencies]
dyntls = { path = "../../../app/dyntls" , features = ["host"]}